# battel_tested_Scalable_Secure_Production_ready_multiagent_codes

./: README.md  README_FULL.md  ai_strategy&aRCHEtecture.md  fadfad.txt  pyproject.toml  readme.md  requiremets.txt  test.ipynb  uvicorn.out
ai_strategy&ARchetevcture/: test_basic_agent_route.py  test_basic_agent_router.py
ai_strategy_architecture/: basic_agent_router.py  config.py  cost_monitor_and_resource_optimizer.py  pii_utils.py  test_pii_utils.py  wrapping_langchainOn_fastapi_endpoint.py
ai_strategy_architecture/code_explains/: wrapping_langchainOn_fastapi_endpoint.md
implementation_patterns/: asnyc_chat_service.py  custom_component2.py  custom_components.py  design_patterns.md  fallback.py  retry.py
misc/: extraction.py  prompt.py  readme.md
rought folder/: readm.md
