[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battel_tested_Scalable_Secure_Production_ready_multiagent_codes"
version = "0.1.0"
description = "Production-ready multi-agent routing and PII handling examples"
authors = [ {name = "Ujjwal Basnet"} ]
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  "fastapi>=0.95.0",
  "uvicorn[standard]>=0.22.0",
  "pydantic-settings>=0.1.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
presidio = [
  "presidio-analyzer>=2.0.0",
  "presidio-anonymizer>=2.0.0",
]
dev = [
  "pytest>=7.0",
  "pytest-asyncio",
]

[tool.setuptools]
package-dir = {"" = ""}
